samples/OK/return_while.php
<?php
declare(strict_types=1);
$c = "haha";
while($c)
{
    return;
}
?>
